Fix side nav overlapping footer when page is scrolled to the bottom (#102).

--- a/theme/shippable/static/ash/css/custom.css
+++ b/theme/shippable/static/ash/css/custom.css
@@ -263,6 +263,9 @@ code {
 #sidebar a {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
 }
+.sticky-anchor {
+  position: fixed;
+}
 
 #sidebar .tocbar {
   position: fixed;
